--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -14,14 +14,20 @@
                 <div class="text-[14px] leading-[120%] font-semibold">Địa chỉ: 
                     <span class="font-normal">{{selectedField.address}}</span>
                 </div>
-                <div class="text-[14px] leading-[120%] font-semibold">Đã đặt: 
-                    <span class="font-normal">{{getCountByStatus('BOOKED')}}/{{getTotalSlots()}}</span>
+                <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
+                    <div class="w-4 h-4 bg-red-500 rounded mr-2"></div>
+                    Đã đặt: 
+                    <span class="font-normal ml-[2px]">{{getCountByStatus('BOOKED')}}/{{getTotalSlots()}}</span>
                 </div>
-                <div class="text-[14px] leading-[120%] font-semibold">Còn trống: 
-                    <span class="font-normal">{{getCountByStatus('AVAILABLE')}}/{{getTotalSlots()}}</span>
+                <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
+                    <div class="w-4 h-4 bg-green-500 rounded mr-2"></div>
+                    Còn trống: 
+                    <span class="font-normal ml-[2px]">{{getCountByStatus('AVAILABLE')}}/{{getTotalSlots()}}</span>
                 </div>
-                <div class="text-[14px] leading-[120%] font-semibold">Đóng: 
-                    <span class="font-normal">{{getCountByStatus('CLOSED')}}/{{getTotalSlots()}}</span>
+                <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
+                    <div class="w-4 h-4 bg-gray-500 rounded mr-2"></div>
+                    Đóng: 
+                    <span class="font-normal ml-[2px]">{{getCountByStatus('CLOSED')}}/{{getTotalSlots()}}</span>
                 </div>
             </div>
         </div>
@@ -29,7 +35,7 @@
             <div class="mb-5">
                 <h3 class="text-lg font-bold mb-2">Lịch sân</h3>
                 <div class="flex items-center gap-4 mb-4">
-                    <div class="flex items-center gap-2">
+                    <!-- <div class="flex items-center gap-2">
                         <div class="w-4 h-4 bg-green-500 rounded"></div>
                         <span>Còn trống</span>
                     </div>
@@ -40,7 +46,7 @@
                     <div class="flex items-center gap-2">
                         <div class="w-4 h-4 bg-gray-500 rounded"></div>
                         <span>Đóng cửa</span>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="flex gap-4 mb-4">
