--- a/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
+++ b/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
@@ -159,3 +159,5 @@
       </div>
     </div>
   </div>
+
+<app-popup-need-login [isVisible]="isVisible" (changeVisibleDelete)="handleChangeVisible($event)"></app-popup-need-login>
