--- a/src/app/features/user/concert/concert-list/concert-list.component.html
+++ b/src/app/features/user/concert/concert-list/concert-list.component.html
@@ -5,7 +5,7 @@
         <div class="text-primary">Sự kiện</div>
     </div>
     <div class="w-full mt-7 flex items-start justify-between gap-[40px]">
-        <div class="w-[20%]">
+        <!-- <div class="w-[20%]">
             <div class="w-full relative">
                 <input 
                   type="text" 
@@ -34,8 +34,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="w-[80%]">
+        </div> -->
+        <div class="w-full">
             <div class="text-center text-[28px] font-semibold font-[montserrat]">{{nameConcertCheck}}</div>
             <div *ngIf="isLoading" class="w-full flex justify-center my-8">
                 <div class="text-center">Đang tải dữ liệu...</div>
