change modal book fields

--- a/src/app/features/user/list-fields/fields-detail/fields-detail.component.html
+++ b/src/app/features/user/list-fields/fields-detail/fields-detail.component.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="w-[75%]">
-            <app-feilds-shedule></app-feilds-shedule>
+            <app-feilds-shedule [detailInfo]="selectedField"></app-feilds-shedule>
         </div>
     </div>
 </div>
