--- a/src/app/features/user/list-fields/fields-detail/modal-close/modal-close.component.html
+++ b/src/app/features/user/list-fields/fields-detail/modal-close/modal-close.component.html
@@ -1,8 +1,8 @@
-<nz-modal nzWidth="400px" [(nzVisible)]="isVisibleDetail" nzCentered [nzContent]="modalContent"
+<nz-modal nzWidth="400px" [(nzVisible)]="isVisibleClosed" nzCentered [nzContent]="modalContent"
     [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()" class="rounded-xl">
 
     <ng-template #modalContent>
-        Detail 
+        Closed
     </ng-template>
 
     <ng-template #modalFooter>
