--- a/src/assets/styles/antdesign.scss
+++ b/src/assets/styles/antdesign.scss
@@ -75,3 +75,14 @@ span.ant-progress-text.ng-star-inserted {
 .ant-modal-content {
   border-radius: 12px !important;
 }
+
+.ant-modal-body {
+  padding: 20px !important;
+}
+
+.ant-modal-close-x {
+  width: 40px !important;
+  height: 40px !important;
+  line-height: 100% !important;
+  margin-top: 8px !important;
+}
